--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.34.0"
   },
   "dependencies": {
-    "animejs": "^3.0.1"
+    "animejs": "^3.0.1",
+    "axios": "^0.19.0"
   }
 }
