--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "animejs": "^3.0.1",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "fuse.js": "^3.4.5"
   }
 }
