--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "axios": "^0.19.0",
-    "fuse.js": "^3.4.5"
+    "date-fns": "^2.8.0",
+    "fuse.js": "^3.4.5",
+    "promise-polyfill": "8.1.3"
   }
 }
