--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "NODE_ENV=development gulp"
+    "dev": "NODE_ENV=development gulp",
+    "deploy": "/bin/zsh  /Applications/MAMP/htdocs/koicbd/wp-content/themes/koitheme/deploy.sh"
   },
   "keywords": [],
   "author": "",
