--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "webpack": "^4.34.0"
   },
   "dependencies": {
+    "@woocommerce/woocommerce-rest-api": "^1.0.1",
     "animejs": "^3.0.1",
     "axios": "^0.19.0",
     "date-fns": "^2.8.0",
