--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "axios": "^0.19.0",
     "date-fns": "^2.8.0",
     "fuse.js": "^3.4.5",
+    "jquery": "^3.4.1",
     "promise-polyfill": "8.1.3"
   }
 }
