--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cli": "^2.2.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-plumber": "^1.2.1",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
